change command line npx for webpack build

--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -13,15 +13,15 @@
                 <div class="q_logo">
                   <a itemprop="url" href="/">
                     <img itemprop="image" class="normal"
-                      src="/assets/img/logo_no_MA.png" alt="Logo" /> <img
+                      src="assets/img/logo_no_MA.png" alt="Logo" /> <img
                       itemprop="image" class="light"
-                      src="/assets/img/index/logo.png" alt="Logo" /> <img
+                      src="assets/img/index/logo.png" alt="Logo" /> <img
                       itemprop="image" class="dark"
-                      src="/assets/img/index/logo_black.png" alt="Logo" />
+                      src="assets/img/index/logo_black.png" alt="Logo" />
                     <img itemprop="image" class="sticky"
-                      src="/assets/img/index/logo_black.png" alt="Logo" />
+                      src="assets/img/index/logo_black.png" alt="Logo" />
                     <img itemprop="image" class="mobile"
-                      src="/assets/img/logo_no_MA.png" alt="Logo" /> </a>
+                      src="assets/img/logo_no_MA.png" alt="Logo" /> </a>
                 </div>
               </div>
             </div>
@@ -32,7 +32,7 @@
                     <div class="textwidget custom-html-widget">
                       <ul>                              
                         <li><img
-                            src="/assets/img/index/email copy.svg">general@minhanhxnk.com
+                            src="assets/img/index/email copy.svg">general@minhanhxnk.com
                         </li>
                       </ul>
                     </div>
@@ -49,7 +49,7 @@
                     <div class="textwidget custom-html-widget">
                       <ul class="career_header">
                         <li><a href="nghe-nghiep.html"><img
-                              src="/assets/img/index/career_icon.svg">TUYỂN
+                              src="assets/img/index/career_icon.svg">TUYỂN
                             DỤNG</a></li>
                       </ul>
                     </div>
