--- a/src/en/contact.ejs
+++ b/src/en/contact.ejs
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
-<html lang="vi" prefix="og: http://ogp.me/ns#">
+<html lang="en-US" prefix="og: http://ogp.me/ns#">
 
 <head>
   <meta charset="UTF-8" />
-  <title>Liên Hệ</title>
+  <title>Contact</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-  <link rel="canonical" href="/lien-he/" />
-  <meta property="og:locale" content="vi_VN" />
-  <meta property="og:locale:alternate" content="en_US" />
+  <link rel="canonical" href="/en/contact/" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:locale:alternate" content="vi_VN" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Liên Hệ - " />
-  <meta property="og:url" content="/lien-he/" />
-  <meta property="og:site_name" content="" />
+  <meta property="og:title" content="Contact" />
+  <meta property="og:url" content="/en/contact/" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Liên Hệ - " />
-  <%- include('partial/head.ejs') %>
+  <meta name="twitter:title" content="Contact" />
+  <%- include('../partial/head.en.ejs') %>
   <style id='stylesheet-inline-css' type='text/css'>
-    .page-id-71.disabled_footer_top .footer_top_holder,
-    .page-id-71.disabled_footer_bottom .footer_bottom_holder {
+    .page-id-459.disabled_footer_top .footer_top_holder,
+    .page-id-459.disabled_footer_bottom .footer_bottom_holder {
       display: none;
     }
   </style>
-  <script src='assets/js/e4y1l.js' type="text/javascript"></script>
+
+  <script src='../assets/js/e4y1l.js' type="text/javascript"></script>
 </head>
 
 <body data-rsssl=1
-  class="page-template page-template-full_width page-template-full_width-php page page-id-71  qode_grid_1200 qode-child-theme-ver- qode-theme-ver-13.8 qode-theme-vietacc disabled_footer_bottom wpb-js-composer js-comp-ver-5.4.7 vc_responsive"
+  class="page-template page-template-full_width page-template-full_width-php page page-id-459  qode_grid_1200 qode-child-theme-ver- qode-theme-ver-13.8 qode-theme-vietacc disabled_footer_bottom wpb-js-composer js-comp-ver-5.4.7 vc_responsive"
   itemscope itemtype="http://schema.org/WebPage">
   <div class="wrapper">
     <div class="wrapper_inner">
-      <%- include('partial/header.ejs', { page: 'lien-he', lang: 'vi', engPage: 'en/contact.html' }) %>
+      <%- include('../partial/header.ejs', { page: 'lien-he', lang: 'en', viPage: '/lien-he.html' }) %>
       <div class="content ">
         <div class="content_inner  ">
           <div class="title_outer title_without_animation with_image" data-height="180">
@@ -41,7 +41,7 @@
                   <div class="container_inner clearfix">
                     <div class="title_subtitle_holder" style="padding-top:80px;">
                       <div class="title_subtitle_holder_inner">
-                        <h1 style="color:#ffffff"><span>Liên Hệ</span></h1>
+                        <h1 style="color:#ffffff"><span>Contact</span></h1>
                         <span class="separator small right"></span>
                       </div>
                     </div>
@@ -61,52 +61,51 @@
                         <div class="wpb_wrapper">
                           <div class="wpb_text_column wpb_content_element  text_lien_he">
                             <div class="wpb_wrapper">
-                              <h3>LIÊN HỆ<br />
-                                VỚI CHÚNG TÔI</h3>
+                              <h3>CONTACT US</h3>
                             </div>
                           </div>
-                          <div role="form" class="wpcf7" id="wpcf7-f7-p71-o1" lang="en-US" dir="ltr">
+                          <div role="form" class="wpcf7" id="wpcf7-f541-p459-o1" lang="en-US" dir="ltr">
                             <div class="screen-reader-response"></div>
-                            <form action="/lien-he/#wpcf7-f7-p71-o1" method="post" class="wpcf7-form default"
+                            <form action="/en/contact/#wpcf7-f541-p459-o1" method="post" class="wpcf7-form default"
                               novalidate="novalidate">
                               <div style="display: none;">
-                                <input type="hidden" name="_wpcf7" value="7" />
+                                <input type="hidden" name="_wpcf7" value="541" />
                                 <input type="hidden" name="_wpcf7_version" value="5.0.2" />
                                 <input type="hidden" name="_wpcf7_locale" value="en_US" />
-                                <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f7-p71-o1" />
-                                <input type="hidden" name="_wpcf7_container_post" value="71" />
+                                <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f541-p459-o1" />
+                                <input type="hidden" name="_wpcf7_container_post" value="459" />
                               </div>
                               <div class="contact_us">
                                 <div class="contact_col">
                                   <span class="wpcf7-form-control-wrap Name"><input type="text" name="Name" value=""
                                       size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required"
-                                      aria-required="true" aria-invalid="false" placeholder="Họ và Tên" /></span>
+                                      aria-required="true" aria-invalid="false" placeholder="Full Name" /></span>
                                 </div>
                                 <div class="contact_col">
                                   <span class="wpcf7-form-control-wrap Email"><input type="email" name="Email" value=""
                                       size="40"
                                       class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email"
-                                      aria-required="true" aria-invalid="false" placeholder="Địa chỉ email" /></span>
+                                      aria-required="true" aria-invalid="false" placeholder="Email" /></span>
                                 </div>
                                 <div class="contact_col">
                                   <span class="wpcf7-form-control-wrap Phone"><input type="tel" name="Phone" value=""
                                       size="40"
                                       class="wpcf7-form-control wpcf7-text wpcf7-tel wpcf7-validates-as-required wpcf7-validates-as-tel"
-                                      aria-required="true" aria-invalid="false" placeholder="Số điện thoại" /></span>
+                                      aria-required="true" aria-invalid="false" placeholder="Phone" /></span>
                                 </div>
                                 <div class="contact_col">
                                   <span class="wpcf7-form-control-wrap Company"><input type="text" name="Company"
                                       value="" size="40"
                                       class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required"
-                                      aria-required="true" aria-invalid="false" placeholder="Tên công ty" /></span>
+                                      aria-required="true" aria-invalid="false" placeholder="Company" /></span>
                                 </div>
                                 <div class="contact_col_2">
                                   <span class="wpcf7-form-control-wrap noidung"><textarea name="noidung" cols="40"
                                       rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false"
-                                      placeholder="Nội dung"></textarea></span>
+                                      placeholder="Message"></textarea></span>
                                 </div>
                                 <div class="submit">
-                                  <input type="submit" value="GỬI NGAY" class="wpcf7-form-control wpcf7-submit" />
+                                  <input type="submit" value="SEND" class="wpcf7-form-control wpcf7-submit" />
                                 </div>
                               </div>
                               <div class="wpcf7-response-output wpcf7-display-none"></div>
@@ -127,26 +126,27 @@
                         <div class="wpb_wrapper">
                           <div class="wpb_text_column wpb_content_element  thongtin_text">
                             <div class="wpb_wrapper">
-                              <h3>THÔNG TIN CHI TIẾT</h3>
+                              <h3>DETAIL INFORMATION</h3>
                             </div>
                           </div>
                           <div class="wpb_text_column wpb_content_element  text_detail_thong_tin">
                             <div class="wpb_wrapper">
-                              <h4>VĂN PHÒNG GIAO DỊCH</h4>
+                              <h4>WORKING OFFICE</h4>
                               <ul>
-                                <li><strong>A.</strong> 69/2/40 Đường Nguyễn Gia Trí, P. 25, Q. Bình Thạnh, HCM</li>
-                                <li><strong>P.</strong> (028) 3.512.9358</li>
-                                <li><strong>F.</strong> (028) 3.512.9364</li>
+                                <li><strong>A.</strong> 69/2/40 Nguyen Gia Tri Street, Ward 25, Binh Thanh District ,
+                                  HCMC VIETNAM</li>
+                                <li><strong>P. </strong>(+84)283. 512.9358</li>
+                                <li><strong>F:</strong> (+84)283. 512.9364</li>
                               </ul>
                             </div>
                           </div>
                           <div class="wpb_text_column wpb_content_element  text_detail_thong_tin">
                             <div class="wpb_wrapper">
-                              <h4>VĂN PHÒNG ĐẠI DIỆN TẠI HOA KỲ</h4>
+                              <h4>REPRESENTATIVE OFFICE</h4>
                               <ul>
                                 <li><strong>A.</strong> 11610 Aucuba Ln Houston, TX 77095 USA</li>
-                                <li><strong>P.</strong>+1 (832) 614.8843</li>
-                                <li><strong>F:</strong>+1 (952) 249.9822</li>
+                                <li><strong>P. </strong>+1 (832) 614.8843</li>
+                                <li><strong>F:</strong> +1 (952) 249.9822</li>
                               </ul>
                             </div>
                           </div>
@@ -161,10 +161,10 @@
 
         </div>
       </div>
-      <%- include('partial/footer.ejs', {lang: 'vi'}) %>
+      <%- include('../partial/footer.ejs', {lang: 'en'}) %>
     </div>
   </div>
-  <%- include('partial/bodyAssets.ejs') %>
+  <%- include('../partial/bodyAssets.en.ejs') %>
 </body>
 
 </html>
