--- a/src/en/partner.ejs
+++ b/src/en/partner.ejs
@@ -1,46 +1,45 @@
 <!DOCTYPE html>
-<html lang="vi" prefix="og: http://ogp.me/ns#">
+<html lang="en-US" prefix="og: http://ogp.me/ns#">
 
 <head>
   <meta charset="UTF-8" />
-  <title>Đối Tác Chiến Lược</title>
+  <title>Partner</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-  <link rel="canonical" href="/doi-tac-chien-luoc/" />
-  <meta property="og:locale" content="vi_VN" />
-  <meta property="og:locale:alternate" content="en_US" />
+  <link rel="canonical" href="/en/partner/" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:locale:alternate" content="vi_VN" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Đối Tác Chiến Lược" />
-  <meta property="og:url" content="/doi-tac-chien-luoc/" />
-  <meta property="og:site_name" content="" />
+  <meta property="og:title" content="Partner" />
+  <meta property="og:url" content="/en/partner/" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Đối Tác Chiến Lược" />
-  <%- include('partial/head.ejs') %>
+  <meta name="twitter:title" content="Partner" />
+  <%- include('../partial/head.en.ejs') %>
   <style id='stylesheet-inline-css' type='text/css'>
-    .page-id-73.disabled_footer_top .footer_top_holder,
-    .page-id-73.disabled_footer_bottom .footer_bottom_holder {
+    .page-id-463.disabled_footer_top .footer_top_holder,
+    .page-id-463.disabled_footer_bottom .footer_bottom_holder {
       display: none;
     }
   </style>
 </head>
 
 <body data-rsssl=1
-  class="page-template page-template-full_width page-template-full_width-php page page-id-73  qode_grid_1200 qode-child-theme-ver- qode-theme-ver-13.8 qode-theme-vietacc disabled_footer_bottom wpb-js-composer js-comp-ver-5.4.7 vc_responsive"
+  class="page-template page-template-full_width page-template-full_width-php page page-id-463  qode_grid_1200 qode-child-theme-ver- qode-theme-ver-13.8 qode-theme-vietacc disabled_footer_bottom wpb-js-composer js-comp-ver-5.4.7 vc_responsive"
   itemscope itemtype="http://schema.org/WebPage">
   <div class="wrapper">
     <div class="wrapper_inner">
-      <%- include('partial/header.ejs', { page: 'doi-tac-chien-luoc', lang: 'vi', engPage: 'en/partner.html'}) %>
+      <%- include('../partial/header.ejs', { page: 'doi-tac-chien-luoc', lang: 'en' , viPage: '/doi-tac-chien-luoc.html'}) %>
       <div class="content ">
         <div class="content_inner  ">
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="assets/img/doi-tac-chien-luoc/banner.png" alt="&nbsp;" /> </div>
+                  src="https://www.viet-acc.com/wp-content/uploads/2018/05/banner.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
                     <div class="title_subtitle_holder" style="padding-top:80px;">
                       <div class="title_subtitle_holder_inner">
-                        <h1 style="color:#ffffff"><span>Đối Tác Chiến Lược</span></h1>
+                        <h1 style="color:#ffffff"><span>Partner</span></h1>
                         <span class="separator small right"></span>
                       </div>
                     </div>
@@ -70,14 +69,13 @@
                                           class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
                                           <div class="wpb_wrapper">
                                             <p><img class="alignnone size-medium wp-image-78"
-                                                src="assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png" alt=""
+                                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
                                                 width="300" height="141"
-                                                srcset="assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png 300w, assets/img/doi-tac-chien-luoc/doitact_logo_1.png 369w"
+                                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_1-300x141.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_1.png 369w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
-                                            <h3>DSM &#8211; HÀ LAN</h3>
-                                            <p>Năm 2008, <strong>VIỆT ACC</strong> chính thức trở thành đối tác chiến
-                                              lược của <strong>DSM</strong> trong việc phân phối nhóm sản phẩm Animal
-                                              Nutrition tại thị trường Việt Nam</p>
+                                            <h3>DSM &#8211; HOLLAND</h3>
+                                            <p>In 2008, VIET ACC officially became a strategic partner of DSM in
+                                              distributing Animal Nutrition product group in Vietnam market.</p>
                                           </div>
                                         </div>
                                       </div>
@@ -90,9 +88,9 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
                                                 height="618"
-                                                src="assets/img/doi-tac-chien-luoc/doitact_1.png"
+                                                src="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_1.png"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="assets/img/doi-tac-chien-luoc/doitact_1.png 792w, assets/img/doi-tac-chien-luoc/doitact_1-300x234.png 300w, assets/img/doi-tac-chien-luoc/doitact_1-768x599.png 768w, assets/img/doi-tac-chien-luoc/doitact_1-700x546.png 700w"
+                                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_1.png 792w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_1-300x234.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_1-768x599.png 768w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_1-700x546.png 700w"
                                                 sizes="(max-width: 792px) 100vw, 792px" /></div>
                                           </div>
                                         </div>
@@ -116,9 +114,9 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
                                                 height="618"
-                                                src="assets/img/doi-tac-chien-luoc/doitact_2.png"
+                                                src="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2.png"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="assets/img/doi-tac-chien-luoc/doitact_2.png 792w, assets/img/doi-tac-chien-luoc/doitact_2-300x234.png 300w, assets/img/doi-tac-chien-luoc/doitact_2-768x599.png 768w, assets/img/doi-tac-chien-luoc/doitact_2-700x546.png 700w"
+                                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2.png 792w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2-300x234.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2-768x599.png 768w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2-700x546.png 700w"
                                                 sizes="(max-width: 792px) 100vw, 792px" /></div>
                                           </div>
                                         </div>
@@ -132,14 +130,13 @@
                                           class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
                                           <div class="wpb_wrapper">
                                             <p><img class="alignnone size-medium wp-image-80"
-                                                src="assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
+                                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
                                                 width="300" height="300"
-                                                srcset="assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png 300w, assets/img/doi-tac-chien-luoc/doitact_logo_2-150x150.png 150w, assets/img/doi-tac-chien-luoc/doitact_logo_2.png 360w"
+                                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2-300x300.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2-150x150.png 150w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2.png 360w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
-                                            <h3>DIAMOND V &#8211; HOA KỲ</h3>
-                                            <p>Năm 2012, <strong>VIỆT ACC</strong> trở thành nhà phân phối chính thức và
-                                              duy nhất cung cấp nhóm sản phẩm Species-Specific và Original Line cho
-                                              thương hiệu <strong>DIAMOND V</strong> tại Việt Nam</p>
+                                            <h3>DIAMOND V &#8211; UNITED STATES</h3>
+                                            <p>In 2012, VIET ACC became the sole distributor and distributor of
+                                              Species-Specific and Original Line for DIAMOND V in Vietnam.</p>
                                           </div>
                                         </div>
                                       </div>
@@ -161,9 +158,9 @@
                                           class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
                                           <div class="wpb_wrapper">
                                             <p><img class="alignnone size-medium wp-image-80"
-                                                src="assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png" alt=""
+                                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
                                                 width="300" height="300"
-                                                srcset="assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png 300w, assets/img/doi-tac-chien-luoc/doitact_logo_2-150x150.png 150w, assets/img/doi-tac-chien-luoc/doitact_logo_2.png 360w"
+                                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2-300x300.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2-150x150.png 150w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_2.png 360w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h3>DIAMOND V &#8211; HOA KỲ</h3>
                                             <p>Năm 2012, <strong>VIỆT ACC</strong> trở thành nhà phân phối chính thức và
@@ -181,9 +178,9 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
                                                 height="618"
-                                                src="assets/img/doi-tac-chien-luoc/doitact_2.png"
+                                                src="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2.png"
                                                 class="vc_single_image-img attachment-full" alt=""
-                                                srcset="assets/img/doi-tac-chien-luoc/doitact_2.png 792w, assets/img/doi-tac-chien-luoc/doitact_2-300x234.png 300w, assets/img/doi-tac-chien-luoc/doitact_2-768x599.png 768w, assets/img/doi-tac-chien-luoc/doitact_2-700x546.png 700w"
+                                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2.png 792w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2-300x234.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2-768x599.png 768w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_2-700x546.png 700w"
                                                 sizes="(max-width: 792px) 100vw, 792px" /></div>
                                           </div>
                                         </div>
@@ -206,14 +203,13 @@
                                           class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
                                           <div class="wpb_wrapper">
                                             <p><img class="alignnone size-medium wp-image-79"
-                                                src="assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png" alt=""
+                                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt=""
                                                 width="300" height="289"
-                                                srcset="assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png 300w, assets/img/doi-tac-chien-luoc/doitact_logo_3.png 324w"
+                                                srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_3-300x289.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_logo_3.png 324w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
-                                            <h3>OLMIX &#8211; PHÁP</h3>
-                                            <p>Năm 2009, <strong>Việt ACC</strong> hợp tác chiến lược cùng OLMIX trong
-                                              việc phân phối nhóm sản phẩm Animal Care cho tập đoàn
-                                              <strong>OLMIX</strong> tại Việt Nam</p>
+                                            <h3>OLMIX &#8211; FRANCE</h3>
+                                            <p>In 2009, Viet ACC cooperated with OLMIX to distribute Animal Care
+                                              products to OLMIX Group in Vietnam.</p>
                                           </div>
                                         </div>
                                       </div>
@@ -226,7 +222,7 @@
                                           <div class="wpb_wrapper">
                                             <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="440"
                                                 height="343"
-                                                src="assets/img/doi-tac-chien-luoc/doitact_3-e1529392504214.png"
+                                                src="https://www.viet-acc.com/wp-content/uploads/2018/05/doitact_3-e1529392504214.png"
                                                 class="vc_single_image-img attachment-full" alt="" /></div>
                                           </div>
                                         </div>
@@ -244,7 +240,7 @@
                 </div>
               </div>
               <div class="vc_row wpb_row section vc_row-fluid "
-                style='background-image:url(assets/img/doi-tac-chien-luoc/banner_doitac.png); text-align:left;'>
+                style='background-image:url(https://www.viet-acc.com/wp-content/uploads/2018/05/banner_doitac.png); text-align:left;'>
                 <div class=" full_section_inner clearfix">
                   <div
                     class="wpb_animate_when_almost_visible wpb_slideInUp slideInUp wpb_column vc_column_container vc_col-sm-12">
@@ -253,11 +249,11 @@
                         <div class="wpb_text_column wpb_content_element  nha_cung_cap_text">
                           <div class="wpb_wrapper">
                             <p><img class="alignnone size-full wp-image-35 aligncenter" style="margin-bottom: 30px;"
-                                src="assets/img/index/quote_1.png" alt="" width="72" height="72" /></p>
-                            <h3 style="text-align: center;">Kết nối ngành công nghiệp chăn nuôi<br />
-                              cho một cuộc sống thịnh vượng</h3>
+                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt="" width="72" height="72" /></p>
+                            <h3 style="text-align: center;">Connect the livestock industry<br />
+                              for a prosperous life</h3>
                             <p><img class="size-full wp-image-36 aligncenter"
-                                src="assets/img/index/quote_2.png" alt="" width="72" height="72" /></p>
+                                src="../assets/img/gioi-thieu/gia_Tri_cot_loi.png" alt="" width="72" height="72" /></p>
                           </div>
                         </div>
                       </div>
@@ -274,7 +270,7 @@
                       <div class="wpb_wrapper">
                         <div class="wpb_text_column wpb_content_element  title_doitact_home">
                           <div class="wpb_wrapper">
-                            <h3 style="text-align: center;">Đối tác chiến lược</h3>
+                            <h3 style="text-align: center;">Strategic partnership</h3>
                           </div>
                         </div>
                         <div class="slider_carusal_gallery_bank">
@@ -348,11 +344,12 @@
 
         </div>
       </div>
-      <%- include('partial/footer.ejs', {lang: 'vi'}) %>
+      <%- include('../partial/footer.ejs', {lang: 'en'}) %>
     </div>
   </div>
-  <%- include('partial/bodyAssets.ejs') %>
-  <script type='text/javascript' src='assets/js/waypoints.min.js?ver=5.4.7'></script>
+
+  <%- include('../partial/bodyAssets.en.ejs') %>
+  <script type='text/javascript' src='../assets/js/waypoints.min.js?ver=5.4.7'></script>
 </body>
 
 </html>
