--- a/src/gioi-thieu.ejs
+++ b/src/gioi-thieu.ejs
@@ -3,26 +3,18 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Giới Thiệu - VIET-ACC</title>
+  <title>Giới Thiệu</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/ACC_Logo.png">
-  <link rel="apple-touch-icon" href="assets/img/ACC_Logo.png" />
-  <link
-    href='//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900,300italic,400italic,700italic|Roboto:100,200,300,400,500,600,700,800,900,300italic,400italic,700italic&subset=latin,latin-ext'
-    rel='stylesheet' type='text/css'>
   <link rel="canonical" href="/gioi-thieu/" />
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:locale:alternate" content="en_US" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Giới Thiệu - VIET-ACC" />
+  <meta property="og:title" content="Giới Thiệu" />
   <meta property="og:url" content="/gioi-thieu/" />
-  <meta property="og:site_name" content="VIET-ACC" />
+  <meta property="og:site_name" content="" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Giới Thiệu - VIET-ACC" />
-  <meta name="twitter:image" content="http://../wp-content/uploads/2018/05/gia_tri_hieu_qua.png" />
-  <link rel='dns-prefetch' href='//s.w.org' />
-  <link rel="stylesheet" type="text/css" href="//www.viet-acc.com/wp-content/cache/wpfc-minified/876zh8qz/bx96m.css"
-    media="all" />
+  <meta name="twitter:title" content="Giới Thiệu" />
+  <%- include('partial/head.ejs') %>
   <style id='ctl_styles-inline-css' type='text/css'>
     .cool_timeline h1.timeline-main-title {
       font-weight: inherit !important;
@@ -298,37 +290,16 @@
         border-left-color: transparent;
       }
     }
-
-    no
   </style>
-  <link rel="stylesheet" type="text/css" href="//www.viet-acc.com/wp-content/cache/wpfc-minified/1dgf86a0/bqwtj.css"
-    media="all" />
-  <link rel="stylesheet" type="text/css" href="assets/css/font-icon.css" media="all" />
   <style id='stylesheet-inline-css' type='text/css'>
     .page-id-105.disabled_footer_top .footer_top_holder,
     .page-id-105.disabled_footer_bottom .footer_bottom_holder {
       display: none;
     }
   </style>
-  <link rel="stylesheet" type="text/css" href="//www.viet-acc.com/wp-content/cache/wpfc-minified/2q8hiwir/bqwtj.css"
+  <link rel="stylesheet" type="text/css" href="assets/css/index4.css"
     media="all" />
-  <script type='text/javascript' src='https://www.viet-acc.com/wp-includes/js/jquery/jquery.js?ver=1.12.4'></script>
-  <script type='text/javascript'
-    src='https://www.viet-acc.com/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.4.1'></script>
-  <script src='//www.viet-acc.com/wp-content/cache/wpfc-minified/6wbu1xzh/bqwtj.js' type="text/javascript"></script>
-  <style type="text/css">
-    .recentcomments a {
-      display: inline !important;
-      padding: 0 !important;
-      margin: 0 !important;
-    }
-  </style>
-  <script type="text/javascript">function setREVStartSize(e) {
-      try {
-        e.c = jQuery(e.c); var i = jQuery(window).width(), t = 9999, r = 0, n = 0, l = 0, f = 0, s = 0, h = 0;
-        if (e.responsiveLevels && (jQuery.each(e.responsiveLevels, function (e, f) { f > i && (t = r = f, l = e), i > f && f > r && (r = f, n = e) }), t > r && (l = n)), f = e.gridheight[l] || e.gridheight[0] || e.gridheight, s = e.gridwidth[l] || e.gridwidth[0] || e.gridwidth, h = i / s, h = h > 1 ? 1 : h, f = Math.round(h * f), "fullscreen" == e.sliderLayout) { var u = (e.c.width(), jQuery(window).height()); if (void 0 != e.fullScreenOffsetContainer) { var c = e.fullScreenOffsetContainer.split(","); if (c) jQuery.each(c, function (e, i) { u = jQuery(i).length > 0 ? u - jQuery(i).outerHeight(!0) : u }), e.fullScreenOffset.split("%").length > 1 && void 0 != e.fullScreenOffset && e.fullScreenOffset.length > 0 ? u -= jQuery(window).height() * parseInt(e.fullScreenOffset, 0) / 100 : void 0 != e.fullScreenOffset && e.fullScreenOffset.length > 0 && (u -= parseInt(e.fullScreenOffset, 0)) } f = u } else void 0 != e.minHeight && f < e.minHeight && (f = e.minHeight); e.c.closest(".rev_slider_wrapper").css({ height: f })
-      } catch (d) { console.log("Failure at Presize of Slider:" + d) }
-    };</script>
+  
   <style type="text/css" data-type="vc_shortcodes-custom-css">
     .vc_custom_1527655478407 {
       padding-right: 0px !important;
@@ -345,15 +316,7 @@
     .vc_custom_1527655473338 {
       padding-left: 0px !important;
     }
-  </style><noscript>
-    <style type="text/css">
-      .wpb_animate_when_almost_visible {
-        opacity: 1;
-      }
-    </style>
-  </noscript>
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i"
-    rel="stylesheet">
+  </style>
 </head>
 
 <body data-rsssl=1
@@ -361,7 +324,7 @@
   itemscope itemtype="http://schema.org/WebPage">
   <div class="wrapper">
     <div class="wrapper_inner">
-      <%- include('partial/header.ejs', { page: 'gioi-thieu' }) %>
+      <%- include('partial/header.ejs', { page: 'gioi-thieu', lang: 'vi', engPage: 'en/about.html' }) %>
       <div class="content ">
         <div class="content_inner  ">
           <div class="title_outer title_without_animation with_image" data-height="180">
@@ -844,111 +807,14 @@
 
         </div>
       </div>
-      <%- include('partial/footer.ejs') %>
+      <%- include('partial/footer.ejs', {lang: 'vi'}) %>
     </div>
   </div>
-  <script type='text/javascript'>
-    /* <![CDATA[ */
-    var wpcf7 = { "apiSettings": { "root": "https:\/\/www.viet-acc.com\/wp-json\/contact-form-7\/v1", "namespace": "contact-form-7\/v1" }, "recaptcha": { "messages": { "empty": "H\u00e3y x\u00e1c nh\u1eadn r\u1eb1ng b\u1ea1n kh\u00f4ng ph\u1ea3i l\u00e0 robot." } } };
-/* ]]> */
-  </script>
-  <script type='text/javascript'
-    src='https://www.viet-acc.com/wp-content/plugins/contact-form-7/includes/js/scripts.js?ver=5.0.2'></script>
-  <script type='text/javascript'>
-    /* <![CDATA[ */
-    var qodeLike = { "ajaxurl": "https:\/\/www.viet-acc.com\/wp-admin\/admin-ajax.php" };
-/* ]]> */
-  </script>
-  <script type='text/javascript'
-    src='https://www.viet-acc.com/wp-content/themes/vietacc/js/plugins/qode-like.min.js?ver=4.9.18'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-core.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-widget.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-accordion.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-position.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-menu.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='https://www.viet-acc.com/wp-includes/js/wp-a11y.min.js?ver=4.9.18'></script>
-  <script type='text/javascript'>
-    /* <![CDATA[ */
-    var uiAutocompleteL10n = { "noResults": "Kh\u00f4ng t\u00ecm th\u1ea5y k\u1ebft qu\u1ea3.", "oneResult": "\u0110\u00e3 t\u00ecm th\u1ea5y 1 k\u1ebft qu\u1ea3. H\u00e3y d\u00f9ng ph\u00edm l\u00ean v\u00e0 xu\u1ed1ng \u0111\u1ec3 di chuy\u1ec3n.", "manyResults": "%d k\u1ebft qu\u1ea3 \u0111\u01b0\u1ee3c t\u00ecm th\u1ea5y. S\u1eed d\u1ee5ng ph\u00edm l\u00ean \/ xu\u1ed1ng \u0111\u1ec3 xem.", "itemSelected": "M\u1ee5c \u0111\u01b0\u1ee3c ch\u1ecdn." };
-/* ]]> */
-  </script>
-  <script type='text/javascript' src='assets/js/jqueryui-autocomplete.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-button.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-datepicker.min.js?ver=1.11.4'></script>
-  <script type='text/javascript'>
-    jQuery(document).ready(function (jQuery) { jQuery.datepicker.setDefaults({ "closeText": "\u0110\u00f3ng", "currentText": "H\u00f4m nay", "monthNames": ["Th\u00e1ng M\u1ed9t", "Th\u00e1ng Hai", "Th\u00e1ng Ba", "Th\u00e1ng T\u01b0", "Th\u00e1ng N\u0103m", "Th\u00e1ng S\u00e1u", "Th\u00e1ng B\u1ea3y", "Th\u00e1ng T\u00e1m", "Th\u00e1ng Ch\u00edn", "Th\u00e1ng M\u01b0\u1eddi", "Th\u00e1ng M\u01b0\u1eddi M\u1ed9t", "Th\u00e1ng M\u01b0\u1eddi Hai"], "monthNamesShort": ["Th1", "Th2", "Th3", "Th4", "Th5", "Th6", "Th7", "Th8", "Th9", "Th10", "Th11", "Th12"], "nextText": "Ti\u1ebfp theo", "prevText": "Quay v\u1ec1", "dayNames": ["Ch\u1ee7 Nh\u1eadt", "Th\u1ee9 Hai", "Th\u1ee9 Ba", "Th\u1ee9 T\u01b0", "Th\u1ee9 N\u0103m", "Th\u1ee9 S\u00e1u", "Th\u1ee9 B\u1ea3y"], "dayNamesShort": ["CN", "T2", "T3", "T4", "T5", "T6", "T7"], "dayNamesMin": ["C", "H", "B", "T", "N", "S", "B"], "dateFormat": "dd\/mm\/yy", "firstDay": 1, "isRTL": false }); });
-  </script>
-  <script type='text/javascript' src='assets/js/jqueryui-mouse.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-resizable.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-draggable.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-dialog.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-droppable.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-progressbar.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-selectable.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-sortable.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-slider.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-spinner.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-tooltip.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-tabs.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-blind.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-bounce.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-clip.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-drop.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-explode.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-fade.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-fold.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-highlight.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-pulsate.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-size.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-scale.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-shake.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-slide.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-transfer.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/plugins.js?ver=4.9.18'></script>
-  <script type='text/javascript' src='assets/js/jquery.carouFredSel-6.2.1.min.js?ver=4.9.18'></script>
-  <script type='text/javascript' src='assets/js/lemmon-slider.min.js?ver=4.9.18'></script>
-  <script type='text/javascript' src='assets/js/jquery.fullPage.min.js?ver=4.9.18'></script>
-  <script type='text/javascript' src='assets/js/jquery.mousewheel.min.js?ver=4.9.18'></script>
-  <script type='text/javascript' src='assets/js/jquery.touchSwipe.min.js?ver=4.9.18'></script>
-  <script type='text/javascript'
-    src='assets/js/isotope.pkgd.min.js?ver=5.4.7'></script>
-  <script type='text/javascript' src='assets/js/packery-mode.pkgd.min.js?ver=4.9.18'></script>
-  <script type='text/javascript' src='assets/js/jquery.stretch.js?ver=4.9.18'></script>
-  <script type='text/javascript' src='assets/js/imagesloaded.js?ver=4.9.18'></script>
-  <script type='text/javascript' src='assets/js/rangeslider.min.js?ver=4.9.18'></script>
-  <script type='text/javascript' src='assets/js/TweenLite.min.js?ver=4.9.18'></script>
-  <script type='text/javascript' src='assets/js/ScrollToPlugin.min.js?ver=4.9.18'></script>
-  <script type='text/javascript' src='assets/js/smoothPageScroll.min.js?ver=4.9.18'></script>
-  <script type='text/javascript' src='assets/js/default_dynamic.js?ver=1531799056'></script>
-  <script type='text/javascript'>
-    /* <![CDATA[ */
-    var QodeAdminAjax = { "ajaxurl": "https:\/\/www.viet-acc.com\/wp-admin\/admin-ajax.php" };
-    var qodeGlobalVars = { "vars": { "qodeAddingToCartLabel": "Adding to Cart..." } };
-/* ]]> */
-  </script>
-  <script type='text/javascript' src='assets/js/default.min.js?ver=4.9.18'></script>
-  
-  <script type='text/javascript' src='assets/js/comment-reply.min.js?ver=4.9.18'></script>
-  <script type='text/javascript' src='assets/js/js_composer_front.min.js?ver=5.4.7'></script>
-  <script type='text/javascript' src='assets/js/wp-embed.min.js?ver=4.9.18'></script>
+  <%- include('partial/bodyAssets.ejs') %>
   <script type='text/javascript' src='assets/js/waypoints.min.js?ver=5.4.7'></script>
   <script type='text/javascript' src='assets/js/jquery.viewportchecker.js'></script>
   <script type='text/javascript' src='assets/js/jquery.prettyPhoto.js'></script>
   <script type='text/javascript' src='assets/js/ctl_scripts.js'></script>
-  <script type="text/javascript">
-    var date = new Date();
-    date.setTime(date.getTime() + 31536000);
-    document.cookie = "pll_language=vi; expires=" + date.toUTCString() + "; path=/";</script>
-  <script type="text/javascript">
-    jQuery(document).ready(function ($) {
-      $(".text_tintuc_detail:lang(en-US) a.button_learmore:contains('Xem thêm')").html("Read More");
-      $(".nong_san_tho_text:lang(en-US) a.button_learmore:contains('Xem thêm')").html("Read More");
-    })
-  </script>
-  <script src="assets/js/slick.min.js"></script>
-  <script src="assets/js/main.js"></script>
-  <link rel="stylesheet" type="text/css" href="assets/css/effect.css" media="all" />
 </body>
 
 </html>
