--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,15 +5,8 @@
   <meta charset="UTF-8" />
   <title>Công Ty</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.jpg">
-  <link rel="apple-touch-icon" href="assets/img/ACC_Logo.png" />
-  <link
-    href='//fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900,300italic,400italic,700italic|Roboto:100,200,300,400,500,600,700,800,900,300italic,400italic,700italic&subset=latin,latin-ext'
-    rel='stylesheet' type='text/css'>
-
   <meta name="description"
-    content="Thế mạnh đặc biệt của chúng tôi là sự phối hợp để tạo ra các điều kiện kinh doanh dựa vào danh mục khách hàng phong phú. Qua đó, chúng tôi có cơ sở vững chắc để mang đến những giải pháp tối ưu cho từng khách hàng. Với chúng tôi, hiệu quả chính là điều kiện hàng đầu trước khi thực hiện bất kỳ dự án nào." />
+  content="Thế mạnh đặc biệt của chúng tôi là sự phối hợp để tạo ra các điều kiện kinh doanh dựa vào danh mục khách hàng phong phú. Qua đó, chúng tôi có cơ sở vững chắc để mang đến những giải pháp tối ưu cho từng khách hàng. Với chúng tôi, hiệu quả chính là điều kiện hàng đầu trước khi thực hiện bất kỳ dự án nào." />
   <link rel="canonical" href="/" />
   <meta property="og:locale" content="vi_VN" />
   <meta property="og:locale:alternate" content="en_US" />
@@ -25,47 +18,17 @@
   <meta property="og:site_name" content="VIET-ACC" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:description"
-    content="Thế mạnh đặc biệt của chúng tôi là sự phối hợp để tạo ra các điều kiện kinh doanh dựa vào danh mục khách hàng phong phú. Qua đó, chúng tôi có cơ sở vững chắc để mang đến những giải pháp tối ưu cho từng khách hàng. Với chúng tôi, hiệu quả chính là điều kiện hàng đầu trước khi thực hiện bất kỳ dự án nào." />
+  content="Thế mạnh đặc biệt của chúng tôi là sự phối hợp để tạo ra các điều kiện kinh doanh dựa vào danh mục khách hàng phong phú. Qua đó, chúng tôi có cơ sở vững chắc để mang đến những giải pháp tối ưu cho từng khách hàng. Với chúng tôi, hiệu quả chính là điều kiện hàng đầu trước khi thực hiện bất kỳ dự án nào." />
   <meta name="twitter:title" content="Công Ty" />
+  <%- include('partial/head.ejs') %>
   <script
     type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"https:\/\/www.viet-acc.com\/","name":"VIET-ACC","potentialAction":{"@type":"SearchAction","target":"https:\/\/www.viet-acc.com\/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
-
-  <link rel="stylesheet" type="text/css" href="assets/css/index.css" media="all" />
-  <link rel="stylesheet" type="text/css" href="assets/css/font-icon.css" media="all" />
   <style id='stylesheet-inline-css' type='text/css'>
     .page-id-15.disabled_footer_top .footer_top_holder,
     .page-id-15.disabled_footer_bottom .footer_bottom_holder {
       display: none;
     }
   </style>
-  <link rel="stylesheet" type="text/css" href="assets/css/index.css" media="all" />
-  <script type='text/javascript' src='assets/js/jquery.js?ver=1.12.4'></script>
-  <script type='text/javascript' src='assets/js/jquery-migrate.min.js?ver=1.4.1'></script>
-  <script src='assets/js/index.js' type="text/javascript"></script>
-  <style type="text/css">
-    .recentcomments a {
-      display: inline !important;
-      padding: 0 !important;
-      margin: 0 !important;
-    }
-  </style>
-
-
-  <script type="text/javascript">function setREVStartSize(e) {
-      try {
-        e.c = jQuery(e.c); var i = jQuery(window).width(), t = 9999, r = 0, n = 0, l = 0, f = 0, s = 0, h = 0;
-        if (e.responsiveLevels && (jQuery.each(e.responsiveLevels, function (e, f) { f > i && (t = r = f, l = e), i > f && f > r && (r = f, n = e) }), t > r && (l = n)), f = e.gridheight[l] || e.gridheight[0] || e.gridheight, s = e.gridwidth[l] || e.gridwidth[0] || e.gridwidth, h = i / s, h = h > 1 ? 1 : h, f = Math.round(h * f), "fullscreen" == e.sliderLayout) { var u = (e.c.width(), jQuery(window).height()); if (void 0 != e.fullScreenOffsetContainer) { var c = e.fullScreenOffsetContainer.split(","); if (c) jQuery.each(c, function (e, i) { u = jQuery(i).length > 0 ? u - jQuery(i).outerHeight(!0) : u }), e.fullScreenOffset.split("%").length > 1 && void 0 != e.fullScreenOffset && e.fullScreenOffset.length > 0 ? u -= jQuery(window).height() * parseInt(e.fullScreenOffset, 0) / 100 : void 0 != e.fullScreenOffset && e.fullScreenOffset.length > 0 && (u -= parseInt(e.fullScreenOffset, 0)) } f = u } else void 0 != e.minHeight && f < e.minHeight && (f = e.minHeight); e.c.closest(".rev_slider_wrapper").css({ height: f })
-      } catch (d) { console.log("Failure at Presize of Slider:" + d) }
-    };</script>
-  <noscript>
-    <style type="text/css">
-      .wpb_animate_when_almost_visible {
-        opacity: 1;
-      }
-    </style>
-  </noscript>
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i"
-    rel="stylesheet">
 </head>
 
 <body data-rsssl=1
@@ -73,7 +36,7 @@
   itemscope itemtype="http://schema.org/WebPage">
   <div class="wrapper">
     <div class="wrapper_inner">
-      <%- include('partial/header.ejs', { page: ''}) %>
+      <%- include('partial/header.ejs', { page: '', lang: 'vi', engPage: 'en/'}) %>
       <div class="content content_top_margin">
         <div class="content_inner  ">
           <div class="full_width">
@@ -772,7 +735,7 @@
 
         </div>
       </div>
-      <%- include('partial/footer.ejs') %>
+      <%- include('partial/footer.ejs', {lang: 'vi'}) %>
     </div>
   </div>
   <script type="text/javascript">
@@ -786,94 +749,8 @@
     }
   </script>
 
-
-  <script type='text/javascript' src='assets/js/contact-form-7.js?ver=5.0.2'></script>
-  <script type='text/javascript'>
-    /* <![CDATA[ */
-    var qodeLike = { "ajaxurl": "https:\/\/www.viet-acc.com\/wp-admin\/admin-ajax.php" };
-/* ]]> */
-  </script>
-  <script type='text/javascript' src='assets/js/qode-like.min.js?ver=4.9.23'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-core.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-widget.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-accordion.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-position.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-menu.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/wp-a11y.min.js?ver=4.9.23'></script>
-  <script type='text/javascript'>
-    /* <![CDATA[ */
-    var uiAutocompleteL10n = { "noResults": "Kh\u00f4ng t\u00ecm th\u1ea5y k\u1ebft qu\u1ea3.", "oneResult": "\u0110\u00e3 t\u00ecm th\u1ea5y 1 k\u1ebft qu\u1ea3. H\u00e3y d\u00f9ng ph\u00edm l\u00ean v\u00e0 xu\u1ed1ng \u0111\u1ec3 di chuy\u1ec3n.", "manyResults": "%d k\u1ebft qu\u1ea3 \u0111\u01b0\u1ee3c t\u00ecm th\u1ea5y. S\u1eed d\u1ee5ng ph\u00edm l\u00ean \/ xu\u1ed1ng \u0111\u1ec3 xem.", "itemSelected": "M\u1ee5c \u0111\u01b0\u1ee3c ch\u1ecdn." };
-/* ]]> */
-  </script>
-  <script type='text/javascript' src='assets/js/jqueryui-autocomplete.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-button.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-datepicker.min.js?ver=1.11.4'></script>
-  <script type='text/javascript'>
-    jQuery(document).ready(function (jQuery) { jQuery.datepicker.setDefaults({ "closeText": "\u0110\u00f3ng", "currentText": "H\u00f4m nay", "monthNames": ["Th\u00e1ng M\u1ed9t", "Th\u00e1ng Hai", "Th\u00e1ng Ba", "Th\u00e1ng T\u01b0", "Th\u00e1ng N\u0103m", "Th\u00e1ng S\u00e1u", "Th\u00e1ng B\u1ea3y", "Th\u00e1ng T\u00e1m", "Th\u00e1ng Ch\u00edn", "Th\u00e1ng M\u01b0\u1eddi", "Th\u00e1ng M\u01b0\u1eddi M\u1ed9t", "Th\u00e1ng M\u01b0\u1eddi Hai"], "monthNamesShort": ["Th1", "Th2", "Th3", "Th4", "Th5", "Th6", "Th7", "Th8", "Th9", "Th10", "Th11", "Th12"], "nextText": "Ti\u1ebfp theo", "prevText": "Quay v\u1ec1", "dayNames": ["Ch\u1ee7 Nh\u1eadt", "Th\u1ee9 Hai", "Th\u1ee9 Ba", "Th\u1ee9 T\u01b0", "Th\u1ee9 N\u0103m", "Th\u1ee9 S\u00e1u", "Th\u1ee9 B\u1ea3y"], "dayNamesShort": ["CN", "T2", "T3", "T4", "T5", "T6", "T7"], "dayNamesMin": ["C", "H", "B", "T", "N", "S", "B"], "dateFormat": "dd\/mm\/yy", "firstDay": 1, "isRTL": false }); });
-  </script>
-  <script type='text/javascript' src='assets/js/jqueryui-mouse.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-resizable.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-draggable.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-dialog.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-droppable.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-progressbar.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-selectable.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-sortable.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-slider.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-spinner.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-tooltip.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-tabs.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-blind.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-bounce.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-clip.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-drop.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-explode.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-fade.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-fold.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-highlight.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-pulsate.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-size.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-scale.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-shake.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-slide.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/jqueryui-effect-transfer.min.js?ver=1.11.4'></script>
-  <script type='text/javascript' src='assets/js/plugins.js?ver=4.9.23'></script>
-  <script type='text/javascript' src='assets/js/jquery.carouFredSel-6.2.1.min.js?ver=4.9.23'></script>
-  <script type='text/javascript' src='assets/js/lemmon-slider.min.js?ver=4.9.23'></script>
-  <script type='text/javascript' src='assets/js/jquery.fullPage.min.js?ver=4.9.23'></script>
-  <script type='text/javascript' src='assets/js/jquery.mousewheel.min.js?ver=4.9.23'></script>
-  <script type='text/javascript' src='assets/js/jquery.touchSwipe.min.js?ver=4.9.23'></script>
-  <script type='text/javascript' src='assets/js/isotope.pkgd.min.js?ver=5.4.7'></script>
-  <script type='text/javascript' src='assets/js/packery-mode.pkgd.min.js?ver=4.9.23'></script>
-  <script type='text/javascript' src='assets/js/jquery.stretch.js?ver=4.9.23'></script>
-  <script type='text/javascript' src='assets/js/imagesloaded.js?ver=4.9.23'></script>
-  <script type='text/javascript' src='assets/js/rangeslider.min.js?ver=4.9.23'></script>
-  <script type='text/javascript' src='assets/js/TweenLite.min.js?ver=4.9.23'></script>
-  <script type='text/javascript' src='assets/js/ScrollToPlugin.min.js?ver=4.9.23'></script>
-  <script type='text/javascript' src='assets/js/smoothPageScroll.min.js?ver=4.9.23'></script>
-  <script type='text/javascript' src='assets/js/default_dynamic.js?ver=1531799056'></script>
-
-  <script type='text/javascript' src='assets/js/default.min.js?ver=4.9.23'></script>
-  
-  <script type='text/javascript' src='assets/js/comment-reply.min.js?ver=4.9.23'></script>
-  <script type='text/javascript' src='assets/js/js_composer_front.min.js?ver=5.4.7'></script>
-  <script type='text/javascript' src='assets/js/wp-embed.min.js?ver=4.9.23'></script>
+  <%- include('partial/bodyAssets.ejs') %>
   <script type='text/javascript' src='assets/js/waypoints.min.js?ver=5.4.7'></script>
-  <script type="text/javascript">
-    var date = new Date();
-    date.setTime(date.getTime() + 31536000);
-    document.cookie = "pll_language=vi; expires=" + date.toUTCString() + "; path=/";</script>
-  <script type="text/javascript">
-    jQuery(document).ready(function ($) {
-      $(".text_tintuc_detail:lang(en-US) a.button_learmore:contains('Xem thêm')").html("Read More");
-      $(".nong_san_tho_text:lang(en-US) a.button_learmore:contains('Xem thêm')").html("Read More");
-    })
-  </script>
-  <script src="assets/js/slick.min.js"></script>
-  <script src="assets/js/main.js"></script>
-
-  <link rel="stylesheet" type="text/css" href="assets/css/effect.css" media="all" />
 </body>
 
 </html>
