--- a/src/partial/footer.ejs
+++ b/src/partial/footer.ejs
@@ -1,3 +1,4 @@
+<% if(lang === 'vi') { %>
 <footer>
   <div class="footer_inner clearfix">
     <div class="footer_top_holder">
@@ -138,3 +139,157 @@
     </div>
   </div>
 </footer>
+<% } %>
+
+<% if(lang === 'en') { %>
+<footer>
+  <div class="footer_inner clearfix">
+    <div class="footer_top_holder">
+      <div class="footer_top footer_top_full">
+        <div class="vc_row wpb_row section vc_row-fluid  footer_row_1 grid_section"
+          style='background-color:#ae0d13; text-align:left;'>
+          <div class=" section_inner clearfix">
+            <div class='section_inner_margin clearfix'>
+              <div class="wpb_column vc_column_container vc_col-sm-12">
+                <div class="vc_column-inner ">
+                  <div class="wpb_wrapper">
+                    <div class="wpb_text_column wpb_content_element  footer_info">
+                      <div class="wpb_wrapper">
+                        <ul>
+                          <li>
+                            <h3>HOTLINE</h3>
+                            <p>(028) 35 129 360
+                          </li>
+                          <li>
+                            <h3>FAX</h3>
+                            <p>(028) 35 127 947
+                          </li>
+                          <li>
+                            <h3>EMAIL</h3>
+                            <p>hello@viet-acc.com
+                          </li>
+                          <li>
+                            <h3>ADDRESS</h3>
+                            <p>19th Floor, Office Block, Indochina Park Tower, No. 4 Nguyen Dinh Chieu St., Da Kao
+                              Ward, District 1, Ho Chi Minh City, Viet Nam.</p>
+                            <p>Office: No. 69/2/40 Nguyen Gia Tri St., Ward 25, Binh Thanh District, HCMC, Viet
+                              Nam
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="vc_row wpb_row section vc_row-fluid  footer_row_2 grid_section"
+          style='background-color:#f4f4f4; text-align:left;'>
+          <div class=" section_inner clearfix">
+            <div class='section_inner_margin clearfix'>
+              <div class="copy_right_text wpb_column vc_column_container vc_col-sm-4">
+                <div class="vc_column-inner ">
+                  <div class="wpb_wrapper">
+                    <div class="wpb_single_image wpb_content_element vc_align_left">
+                      <div class="wpb_wrapper">
+                        <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="402" height="172"
+                            src="https://www.viet-acc.com/wp-content/uploads/2018/05/footer.png"
+                            class="vc_single_image-img attachment-full" alt=""
+                            srcset="https://www.viet-acc.com/wp-content/uploads/2018/05/footer.png 402w, https://www.viet-acc.com/wp-content/uploads/2018/05/footer-300x128.png 300w, https://www.viet-acc.com/wp-content/uploads/2018/05/footer-400x172.png 400w"
+                            sizes="(max-width: 402px) 100vw, 402px" /></div>
+                      </div>
+                    </div>
+                    <div class="wpb_text_column wpb_content_element  display_desktop">
+                      <div class="wpb_wrapper">
+                        <p class="p1">Copyright 2018 Viet ACC. All right reserved</p>
+                        <p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="wpb_column vc_column_container vc_col-sm-4">
+                <div class="vc_column-inner ">
+                  <div class="wpb_wrapper">
+                    <div class="wpb_text_column wpb_content_element  footer_link">
+                      <div class="wpb_wrapper">
+                        <h3>About Viet ACC</h3>
+                        <ul>
+                          <li><a href="#">About</a></li>
+                          <li><a href="#">Product</a></li>
+                          <li><a href="#">Contact</a></li>
+                        </ul>
+                        <ul>
+                          <li><a href="#">News &amp; Events</a></li>
+                          <li><a href="#">Partners</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="wpb_column vc_column_container vc_col-sm-4">
+                <div class="vc_column-inner ">
+                  <div class="wpb_wrapper">
+                    <div role="form" class="wpcf7" id="wpcf7-f544-o1" lang="en-US" dir="ltr">
+                      <div class="screen-reader-response"></div>
+                      <form action="/en/#wpcf7-f544-o1" method="post" class="wpcf7-form default"
+                        novalidate="novalidate">
+                        <div style="display: none;">
+                          <input type="hidden" name="_wpcf7" value="544" />
+                          <input type="hidden" name="_wpcf7_version" value="5.0.2" />
+                          <input type="hidden" name="_wpcf7_locale" value="en_US" />
+                          <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f544-o1" />
+                          <input type="hidden" name="_wpcf7_container_post" value="0" />
+                        </div>
+                        <div class="newlletter">
+                          <h3>Sign up for information</h3>
+                          <div class="form_newslleter">
+                            <p><span class="wpcf7-form-control-wrap Email"><input type="email" name="Email"
+                                  value="" size="40"
+                                  class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email"
+                                  aria-required="true" aria-invalid="false" placeholder="Your Email" /></span></p>
+                            <p class="submit"><input type="submit" value="Send"
+                                class="wpcf7-form-control wpcf7-submit" /></p>
+                            </p>
+                          </div>
+                        </div>
+                        <div class="wpcf7-response-output wpcf7-display-none"></div>
+                      </form>
+                    </div>
+                    <div class="wpb_raw_code wpb_content_element wpb_raw_html social_icon_footer">
+                      <div class="wpb_wrapper">
+                        <h3>Connect with us</h3>
+                        <ul>
+                          <li><a href="#"><span aria-hidden="true" class="social_facebook"></span></a></li>
+                          <li><a href="#"><span aria-hidden="true" class="social_youtube"></span></a></li>
+                          <li><a href="#"><span aria-hidden="true" class="social_googleplus"></span></a></li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="wpb_text_column wpb_content_element  display_mobile copy_right_comma">
+                      <div class="wpb_wrapper">
+                        <p class="p1">Copyright 2018 Viet ACC. All right reserved<br />
+                          
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="text-13" class="widget widget_text">
+          <div class="textwidget">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer_bottom_holder">
+      <div class="footer_bottom">
+      </div>
+    </div>
+  </div>
+</footer>
+<% } %>
