--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -14,7 +14,7 @@
                 <div class="q_logo">
                   <a itemprop="url" href="/">
                     <img itemprop="image" class="normal"
-                      src="assets/img/logo_no_MA.png" alt="Logo" /> <img
+                      src="assets/img/logo.png" alt="Logo" /> <img
                       itemprop="image" class="light"
                       src="assets/img/index/logo.png" alt="Logo" /> <img
                       itemprop="image" class="dark"
@@ -22,7 +22,7 @@
                     <img itemprop="image" class="sticky"
                       src="assets/img/index/logo_black.png" alt="Logo" />
                     <img itemprop="image" class="mobile"
-                      src="assets/img/logo_no_MA.png" alt="Logo" /> </a>
+                      src="assets/img/logo.png" alt="Logo" /> </a>
                 </div>
               </div>
             </div>
@@ -144,12 +144,9 @@
                 <div class="header_bottom_right_widget_holder">
                   <div class="widget_text header_bottom_widget widget_custom_html">
                     <div class="textwidget custom-html-widget">
-                      <ul>
+                      <ul>                       
                         <li><img
-                            src="https://www.viet-acc.com/wp-content/themes/vietacc-child/images/phone-call copy.svg">(028)
-                          35 129 364</li>
-                        <li><img
-                            src="https://www.viet-acc.com/wp-content/themes/vietacc-child/images/email copy.svg">hello@viet-acc.com
+                            src="https://www.viet-acc.com/wp-content/themes/vietacc-child/images/email copy.svg">general@minhanhxnk.com
                         </li>
                       </ul>
                     </div>
