--- a/src/doi-tac-chien-luoc.ejs
+++ b/src/doi-tac-chien-luoc.ejs
@@ -70,12 +70,57 @@
                                           class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
                                           <div class="wpb_wrapper">
                                             <p><img class="alignnone size-medium wp-image-78"
+                                                src="assets/img/doi-tac-chien-luoc/logo_massel.svg" alt=""
+                                                width="300" height="141"
+                                                srcset="assets/img/doi-tac-chien-luoc/logo_massel.svg 300w, assets/img/doi-tac-chien-luoc/logo_massel.svg 369w"
+                                                sizes="(max-width: 300px) 100vw, 300px" /></p>
+                                            <h3>DSM &#8211; HÀ LAN</h3>
+                                            <p>Năm 2023, <strong>Minh Anh Group</strong> chính thức trở thành đối tác chiến
+                                              lược của <strong>Massel</strong> trong việc phân phối nhóm sản phẩm không chứa gluten, lactose và các chất béo động vật, phù hợp với người ăn chay và người ăn chay ăn chay.</p>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <div class="wpb_column vc_column_container vc_col-sm-6">
+                                    <div class="vc_column-inner ">
+                                      <div class="wpb_wrapper">
+                                        <div class="wpb_single_image wpb_content_element vc_align_left">
+                                          <div class="wpb_wrapper">
+                                            <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="792"
+                                                height="618"
+                                                src="assets/img/doi-tac-chien-luoc/logo_massel.svg"
+                                                class="vc_single_image-img attachment-full" alt=""
+                                                srcset="assets/img/doi-tac-chien-luoc/product_massel.jpg 792w, assets/img/doi-tac-chien-luoc/product_massel.jpg 300w, assets/img/doi-tac-chien-luoc/product_massel.jpg 768w, assets/img/doi-tac-chien-luoc/product_massel.jpg 700w"
+                                                sizes="(max-width: 792px) 100vw, 792px" /></div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="vc_row wpb_row section vc_row-fluid vc_inner  chuoi_detail_row"
+                            style=' text-align:left;'>
+                            <div class=" full_section_inner clearfix">
+                              <div class="  element_from_left">
+                                <div>
+                                  <div class="wpb_column vc_column_container vc_col-sm-6">
+                                    <div class="vc_column-inner ">
+                                      <div class="wpb_wrapper">
+                                        <div
+                                          class="wpb_text_column wpb_content_element  text_chuoi_gia_tri doitac_gia_Tri_text">
+                                          <div class="wpb_wrapper">
+                                            <p><img class="alignnone size-medium wp-image-78"
                                                 src="assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png" alt=""
                                                 width="300" height="141"
                                                 srcset="assets/img/doi-tac-chien-luoc/doitact_logo_1-300x141.png 300w, assets/img/doi-tac-chien-luoc/doitact_logo_1.png 369w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h3>DSM &#8211; HÀ LAN</h3>
-                                            <p>Năm 2008, <strong>VIỆT ACC</strong> chính thức trở thành đối tác chiến
+                                            <p>Năm 2008, <strong>Minh Anh Group</strong> chính thức trở thành đối tác chiến
                                               lược của <strong>DSM</strong> trong việc phân phối nhóm sản phẩm Animal
                                               Nutrition tại thị trường Việt Nam</p>
                                           </div>
@@ -137,7 +182,7 @@
                                                 srcset="assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png 300w, assets/img/doi-tac-chien-luoc/doitact_logo_2-150x150.png 150w, assets/img/doi-tac-chien-luoc/doitact_logo_2.png 360w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h3>DIAMOND V &#8211; HOA KỲ</h3>
-                                            <p>Năm 2012, <strong>VIỆT ACC</strong> trở thành nhà phân phối chính thức và
+                                            <p>Năm 2012, <strong>Minh Anh Group</strong> trở thành nhà phân phối chính thức và
                                               duy nhất cung cấp nhóm sản phẩm Species-Specific và Original Line cho
                                               thương hiệu <strong>DIAMOND V</strong> tại Việt Nam</p>
                                           </div>
@@ -166,7 +211,7 @@
                                                 srcset="assets/img/doi-tac-chien-luoc/doitact_logo_2-300x300.png 300w, assets/img/doi-tac-chien-luoc/doitact_logo_2-150x150.png 150w, assets/img/doi-tac-chien-luoc/doitact_logo_2.png 360w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h3>DIAMOND V &#8211; HOA KỲ</h3>
-                                            <p>Năm 2012, <strong>VIỆT ACC</strong> trở thành nhà phân phối chính thức và
+                                            <p>Năm 2012, <strong>Minh Anh Group</strong> trở thành nhà phân phối chính thức và
                                               duy nhất cung cấp nhóm sản phẩm Species-Specific và Original Line cho
                                               thương hiệu <strong>DIAMOND V</strong> tại Việt Nam</p>
                                           </div>
@@ -211,7 +256,7 @@
                                                 srcset="assets/img/doi-tac-chien-luoc/doitact_logo_3-300x289.png 300w, assets/img/doi-tac-chien-luoc/doitact_logo_3.png 324w"
                                                 sizes="(max-width: 300px) 100vw, 300px" /></p>
                                             <h3>OLMIX &#8211; PHÁP</h3>
-                                            <p>Năm 2009, <strong>Việt ACC</strong> hợp tác chiến lược cùng OLMIX trong
+                                            <p>Năm 2009, <strong>Minh Anh Group</strong> hợp tác chiến lược cùng OLMIX trong
                                               việc phân phối nhóm sản phẩm Animal Care cho tập đoàn
                                               <strong>OLMIX</strong> tại Việt Nam</p>
                                           </div>
