--- a/src/partial/footer.ejs
+++ b/src/partial/footer.ejs
@@ -31,7 +31,7 @@
           </div>
         </div>
         <div class="vc_row wpb_row section vc_row-fluid  footer_row_2 grid_section"
-          style='background-color:#f4f4f4; text-align:left;'>
+          style='background-color:#ffffff; text-align:left;'>
           <div class=" section_inner clearfix">
             <div class='section_inner_margin clearfix'>
               <div class="copy_right_text wpb_column vc_column_container vc_col-sm-4">
@@ -40,9 +40,10 @@
                     <div class="wpb_single_image wpb_content_element vc_align_left">
                       <div class="wpb_wrapper">
                         <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="402" height="172"
-                            src="assets/img/logo_MA.png"
+                            src="assets/img/logo.png"
                             class="vc_single_image-img attachment-full" alt=""
-                            srcset="assets/img/index/footer.png 402w, assets/img/index/footer-300x128.png 300w, assets/img/index/footer-400x172.png 400w"
+                           
+                            srcset="assets/img/logo.png 402w, assets/img/logo.png 300w, assets/img/logo.png 400w"
                             sizes="(max-width: 402px) 100vw, 402px" /></div>
                       </div>
                     </div>
@@ -89,7 +90,7 @@
                           <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f21-o1" />
                           <input type="hidden" name="_wpcf7_container_post" value="0" />
                         </div>
-                        <div class="newlletter">
+                        <!-- <div class="newlletter">
                           <h3>Đăng ký nhận thông tin</h3>
                           <div class="form_newslleter">
                             <p><span class="wpcf7-form-control-wrap Email"><input type="email" name="Email"
@@ -101,11 +102,11 @@
                                 class="wpcf7-form-control wpcf7-submit" /></p>
                             </p>
                           </div>
-                        </div>
+                        </div> -->
                         <div class="wpcf7-response-output wpcf7-display-none"></div>
                       </form>
                     </div>
-                    <div class="wpb_raw_code wpb_content_element wpb_raw_html social_icon_footer">
+                    <!-- <div class="wpb_raw_code wpb_content_element wpb_raw_html social_icon_footer">
                       <div class="wpb_wrapper">
                         <h3>Kết nối với chúng tôi</h3>
                         <ul>
@@ -114,7 +115,7 @@
                           <li><a href="#"><span aria-hidden="true" class="social_googleplus"></span></a></li>
                         </ul>
                       </div>
-                    </div>
+                    </div> -->
                     <div class="wpb_text_column wpb_content_element  display_mobile copy_right_comma">
                       <div class="wpb_wrapper">
                         <p class="p1">Copyright 2023 Minh Anh Group. All right reserved<br />
@@ -155,25 +156,14 @@
                   <div class="wpb_wrapper">
                     <div class="wpb_text_column wpb_content_element  footer_info">
                       <div class="wpb_wrapper">
-                        <ul>
-                          <li>
-                            <h3>HOTLINE</h3>
-                            <p>(028) 35 129 360
-                          </li>
-                          <li>
-                            <h3>FAX</h3>
-                            <p>(028) 35 127 947
-                          </li>
+                        <ul>                          
                           <li>
                             <h3>EMAIL</h3>
-                            <p>hello@viet-acc.com
+                            <p>general@minhanhxnk.com
                           </li>
                           <li>
                             <h3>ADDRESS</h3>
-                            <p>19th Floor, Office Block, Indochina Park Tower, No. 4 Nguyen Dinh Chieu St., Da Kao
-                              Ward, District 1, Ho Chi Minh City, Viet Nam.</p>
-                            <p>Office: No. 69/2/40 Nguyen Gia Tri St., Ward 25, Binh Thanh District, HCMC, Viet
-                              Nam
+                            <p>No. 16, Street 3, Him Lam Residential Area, Tan Hung Ward, District 7, Ho Chi Minh City, Vietnam.</p>                            
                           </li>
                         </ul>
                       </div>
@@ -202,7 +192,7 @@
                     </div>
                     <div class="wpb_text_column wpb_content_element  display_desktop">
                       <div class="wpb_wrapper">
-                        <p class="p1">Copyright 2018 Viet ACC. All right reserved</p>
+                        <p class="p1">Copyright 2023 Minh Anh Group. All right reserved</p>
                         <p>
                       </div>
                     </div>
@@ -214,7 +204,7 @@
                   <div class="wpb_wrapper">
                     <div class="wpb_text_column wpb_content_element  footer_link">
                       <div class="wpb_wrapper">
-                        <h3>About Viet ACC</h3>
+                        <h3>About Minh Anh Group</h3>
                         <ul>
                           <li><a href="#">About</a></li>
                           <li><a href="#">Product</a></li>
@@ -232,7 +222,7 @@
               <div class="wpb_column vc_column_container vc_col-sm-4">
                 <div class="vc_column-inner ">
                   <div class="wpb_wrapper">
-                    <div role="form" class="wpcf7" id="wpcf7-f544-o1" lang="en-US" dir="ltr">
+                    <!-- <div role="form" class="wpcf7" id="wpcf7-f544-o1" lang="en-US" dir="ltr">
                       <div class="screen-reader-response"></div>
                       <form action="/en/#wpcf7-f544-o1" method="post" class="wpcf7-form default"
                         novalidate="novalidate">
@@ -257,8 +247,8 @@
                         </div>
                         <div class="wpcf7-response-output wpcf7-display-none"></div>
                       </form>
-                    </div>
-                    <div class="wpb_raw_code wpb_content_element wpb_raw_html social_icon_footer">
+                    </div> -->
+                    <!-- <div class="wpb_raw_code wpb_content_element wpb_raw_html social_icon_footer">
                       <div class="wpb_wrapper">
                         <h3>Connect with us</h3>
                         <ul>
@@ -267,10 +257,10 @@
                           <li><a href="#"><span aria-hidden="true" class="social_googleplus"></span></a></li>
                         </ul>
                       </div>
-                    </div>
+                    </div> -->
                     <div class="wpb_text_column wpb_content_element  display_mobile copy_right_comma">
                       <div class="wpb_wrapper">
-                        <p class="p1">Copyright 2018 Viet ACC. All right reserved<br />
+                        <p class="p1">Copyright 2023 Minh Anh Group. All right reserved<br />
                           
                       </div>
                     </div>
