- merge code master

--- a/src/doi-tac-chien-luoc.ejs
+++ b/src/doi-tac-chien-luoc.ejs
@@ -326,55 +326,55 @@
                           <section class="slider slider_carusal_gallery_bank_content">
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/logo_doitac_1-2.png"
+                                <img src="assets/img/doi-tac-chien-luoc/logo_doitac_1-2.png"
                                   alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/logo_3.png" alt="" />
+                                <img src="assets/img/doi-tac-chien-luoc/logo_3.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/logo_2.png" alt="" />
+                                <img src="assets/img/doi-tac-chien-luoc/logo_2.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/logo_4.png" alt="" />
+                                <img src="assets/img/doi-tac-chien-luoc/logo_4.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/1.png" alt="" />
+                                <img src="assets/img/doi-tac-chien-luoc/1.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2018/05/4.png" alt="" />
+                                <img src="assets/img/doi-tac-chien-luoc/4.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2021/10/logo-innov-ad.png"
+                                <img src="assets/img/doi-tac-chien-luoc/logo-innov-ad.png"
                                   alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2021/10/logo-R2-AGRO.png"
+                                <img src="assets/img/doi-tac-chien-luoc/logo-R2-AGRO.png"
                                   alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2021/10/orffa-logo.png" alt="" />
+                                <img src="assets/img/doi-tac-chien-luoc/orffa-logo.png" alt="" />
                               </figure>
                             </div>
                             <div class="slide-item">
                               <figure>
-                                <img src="https://www.viet-acc.com/wp-content/uploads/2021/10/jefo-logo.png" alt="" />
+                                <img src="assets/img/doi-tac-chien-luoc/jefo-logo.png" alt="" />
                               </figure>
                             </div>
                           </section>
