--- a/src/index.ejs
+++ b/src/index.ejs
@@ -15,14 +15,14 @@
   <meta property="og:description"
     content="Thế mạnh đặc biệt của chúng tôi là sự phối hợp để tạo ra các điều kiện kinh doanh dựa vào danh mục khách hàng phong phú. Qua đó, chúng tôi có cơ sở vững chắc để mang đến những giải pháp tối ưu cho từng khách hàng. Với chúng tôi, hiệu quả chính là điều kiện hàng đầu trước khi thực hiện bất kỳ dự án nào." />
   <meta property="og:url" content="/" />
-  <meta property="og:site_name" content="VIET-ACC" />
+  <meta property="og:site_name" content="Minh Anh Group" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:description"
   content="Thế mạnh đặc biệt của chúng tôi là sự phối hợp để tạo ra các điều kiện kinh doanh dựa vào danh mục khách hàng phong phú. Qua đó, chúng tôi có cơ sở vững chắc để mang đến những giải pháp tối ưu cho từng khách hàng. Với chúng tôi, hiệu quả chính là điều kiện hàng đầu trước khi thực hiện bất kỳ dự án nào." />
   <meta name="twitter:title" content="Công Ty" />
   <%- include('partial/head.ejs') %>
   <script
-    type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"https:\/\/www.viet-acc.com\/","name":"VIET-ACC","potentialAction":{"@type":"SearchAction","target":"https:\/\/www.viet-acc.com\/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
+    type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"https:\/\/www.minhanhxnk.com\/","name":"Minh Anh Group","potentialAction":{"@type":"SearchAction","target":"https:\/\/www.viet-acc.com\/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
   <style id='stylesheet-inline-css' type='text/css'>
     .page-id-15.disabled_footer_top .footer_top_holder,
     .page-id-15.disabled_footer_bottom .footer_bottom_holder {
