--- a/src/lien-he.ejs
+++ b/src/lien-he.ejs
@@ -35,7 +35,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="https://www.viet-acc.com/wp-content/uploads/2018/05/banner_lien_he.png" alt="&nbsp;" /> </div>
+                  src="assets/img/lien-he/banner_lien_he.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
