--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -127,7 +127,7 @@
                 <div class="q_logo">
                   <a itemprop="url" href="/en/">
                     <img itemprop="image" class="normal"
-                      src="/assets/img/logo_no_MA.png" alt="Logo" /> <img
+                      src="/assets/img/logo.png" alt="Logo" /> <img
                       itemprop="image" class="light"
                       src="/assets/img/index/logo.png" alt="Logo" /> <img
                       itemprop="image" class="dark"
@@ -135,7 +135,7 @@
                     <img itemprop="image" class="sticky"
                       src="/assets/img/index/logo_black.png" alt="Logo" />
                     <img itemprop="image" class="mobile"
-                      src="/assets/img/logo_no_MA.png" alt="Logo" /> </a> </a>
+                      src="/assets/img/logo.png" alt="Logo" /> </a> </a>
                 </div>
               </div>
             </div>
