--- a/src/san-pham.ejs
+++ b/src/san-pham.ejs
@@ -11,7 +11,7 @@
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Sản Phẩm" />
   <meta property="og:url" content="/san-pham/" />
-  <meta property="og:site_name" content="VIET-ACC" />
+  <meta property="og:site_name" content="Minh Anh Group" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Sản Phẩm" />
   <%- include('partial/head.ejs') %>
@@ -137,7 +137,7 @@
                                               hóa chi phí và năng suất vật nuôi, phù hợp với môi trường và công nghệ sản
                                               xuất thức ăn chăn nuôi tại Việt Nam.<br />
                                               <a class="button_learmore"
-                                                href="https://www.viet-acc.com/san-pham/premix-vitamin-khoang/">TÌM HIỂU
+                                                href="../san-pham/premix-vitamin/">TÌM HIỂU
                                                 THÊM</a>
                                             </p>
                                           </div>
