--- a/src/nghe-nghiep.ejs
+++ b/src/nghe-nghiep.ejs
@@ -32,7 +32,7 @@
           <div class="title_outer title_without_animation with_image" data-height="180">
             <div class="title title_size_small  position_right " style="height:180px;">
               <div class="image responsive"><img itemprop="image"
-                  src="https://www.viet-acc.com/wp-content/uploads/2018/05/banner.png" alt="&nbsp;" /> </div>
+                  src="assets/img/nghe-nghiep/banner.png" alt="&nbsp;" /> </div>
               <div class="title_holder">
                 <div class="container">
                   <div class="container_inner clearfix">
